[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy==1.18.0 ; python_version < '3.8' and sys_platform == 'darwin'",
    "numpy"
]

[tool.cibuildwheel.linux]
skip = ["pp*"]  # Missing some version for numpy
test-command = "cd {project} && python setup.py test"

[tool.cibuildwheel.macos]
skip = ["pp*"]  # Missing some version for numpy
test-command = "cd {project} && python setup.py test"

[tool.cibuildwheel.windows]
skip = ["pp*"]  # Missing some version for numpy
test-command = "(cd {project} && tree /F && python setup.py test)"
