[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy==1.13.3; python_version=='3.6' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.14.5; python_version=='3.7' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.17.3; python_version=='3.8' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.19.3; python_version<='3.9' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "numpy==1.21.0; python_version<='3.9' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy==1.19.3; python_version=='3.9' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy"
]

[tool.cibuildwheel]
skip = [
    "pp*",  # Missing some version for numpy
    "*-manylinux_i686", "*-musllinux_x86_64", "*-musllinux_i686" # No support for opencv
]


[tool.cibuildwheel.linux]
test-command = "cd {project} && python setup.py test"

[tool.cibuildwheel.macos]
test-command = "cd {project} && python setup.py test"

[tool.cibuildwheel.windows]
test-command = "python -c \"import subprocess,os,sys; os.chdir(sys.argv[1]); subprocess.call(['python','setup.py','test'])\" {project}"
