[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy==1.13.3; python_version=='3.6' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.14.5; python_version=='3.7' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.17.3; python_version=='3.8' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy==1.19.3; python_version<='3.9' and sys_platform == 'linux' and platform_machine == 'aarch64'",
    "numpy==1.21.0; python_version<='3.9' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy==1.19.3; python_version=='3.9' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "numpy"
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
python_version = 3.6

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

exclude = [ 'setup.py' ]

[tool.mypy-Cython]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = [
    "pp*",  # Missing some version for numpy
    "*manylinux_x86_64", "*win*", "*macos*", "*manylinux_i686", # Skip temporary
    "cp310-manylinux_i686"  # Not supported (no available numpy)
]

[tool.cibuildwheel.linux]
test-command = "cd {project} && python setup.py test"

[[tool.cibuildwheel.overrides]]
select = "*manylinux*"
before-all = [
    "yum install -y libjpeg-devel"
]

[tool.cibuildwheel.macos]
test-command = "cd {project} && python setup.py test"

[tool.cibuildwheel.windows]
test-command = "python -c \"import subprocess,os,sys; os.chdir(sys.argv[1]); subprocess.call(['python','setup.py','test'])\" {project}"
